syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/protobuf/timestamp.proto";

message Workspace {
    uint64 id = 1;

    uint64 tenantId = 2;
    uint64 userId = 3;

    string name = 4;
    string shortName = 5;
    string description = 6;
    string status = 7;
    bool isMain = 8;

    repeated uint64 appInsanceIds = 9;
    repeated uint64 appInstances = 10;
    
    google.protobuf.Timestamp createdAt = 11;
    google.protobuf.Timestamp updatedAt = 12;
}

message WorkspaceFile {
    string path = 1; // Unique identifier for the file within the workspace

    string name = 2;
    bool isDirectory = 3;
    int64 size = 4;
    string mimeType = 5;

    google.protobuf.Timestamp updatedAt = 6;

    optional bytes content = 7; // File content will be empty when listing files
}